# modern-python

./: .coverage  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
source/: conf.py
src/modern_python/: console.py  wikipedia.py
src/modern_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tests/: conftest.py  test_console.py  test_wikipedia.py
