[tool.poetry]
name = "modern-python"
version = "0.1.0"
authors = ["Richuang Lin <lin.richuang@bcg.com>"]
description = "The modern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lin-richuang/modern-python"
repository = "https://github.com/lin-richuang/modern-python"
keywords = ["modern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
modern-python = "modern_python.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

