[tool.poetry]
name = "modern-python"
version = "0.1.0"
authors = ["Richuang Lin <lin.richuang@bcg.com>"]
description = "The modern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lin-richuang/modern-python"
repository = "https://github.com/lin-richuang/modern-python"
keywords = ["modern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
mypy = "^0.782"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

